objects/ca2cq_config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Batch_size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Number of questions the batch process will retrieve per batch execution</description>
        <inlineHelpText>This number delimits the number of questions, have in mind that we estimate 2Q + 2x500Q</inlineHelpText>
        <label>Batch Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Executing_Level__c</fullName>
        <defaultValue>0</defaultValue>
        <description>0 - Email Preferences Backup
1 - Q&amp;A data migration
2 - BestAnswers assignation
3 - Reputation Updates
4 - Email Preferences Restauration</description>
        <label>Current Executing Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exclude_this_Ids__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Comma separated list of the record ids to exclude from migration</description>
        <label>Exclude this Ids</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_this_Ids__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Id of the question records to migrate</description>
        <inlineHelpText>Comma separated list of the record ids to include in the migration</inlineHelpText>
        <label>Include this Ids</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Batch_Id__c</fullName>
        <label>Last Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_processed_date__c</fullName>
        <description>Holds value for last processed date on the questions to chatter question migration</description>
        <inlineHelpText>Holds value for last processed date on the questions to chatter question migration</inlineHelpText>
        <label>Last processed date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migrate_all_Questions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the batch process retrieves all questions</description>
        <label>Migrate all Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_email__c</fullName>
        <description>Email address for receiving notifications after each execution</description>
        <inlineHelpText>Email address for receiving notifications after each execution</inlineHelpText>
        <label>Notification</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Question_Ids__c</fullName>
        <inlineHelpText>Id of questions to include or exclude from migration</inlineHelpText>
        <label>Question Ids</label>
        <type>TextArea</type>
    </fields>
    <label>Migration Config</label>
</CustomObject>